--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,4 +3,14 @@
     padding: 3rem 1.5rem;
     text-align: center;
   }
+
+  #nav_bar_logo {
+
+    height: 4em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+
+
+
   
