--- a/templates/_layout/header_navbar.html.twig
+++ b/templates/_layout/header_navbar.html.twig
@@ -1,7 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  
-    <a class="navbar-brand" href="#">Pantry</a>
-    <span>
-      <img src="{{ asset('img/pantry_logo.png')}}"/>
-    </span>
+<nav class=" bg-dark">
+  <div class="text-center">
+    <img id="nav_bar_logo" src="{{ asset('img/pantry_logo.png') }}" class="rounded" alt="...">
+  </div>
 </nav>
