--- a/templates/pantry/index.html.twig
+++ b/templates/pantry/index.html.twig
@@ -9,6 +9,12 @@
   <div class="starter">
     <h1>Pantry starter pack</h1>
     <p class="lead">Votre gestionnaire anti gaspillage<br> Pour moins de 2000€ mensuel  on vous aide a moins gaspiller </p>
+
+
+
+<button type="button" class="btn btn-primary btn-lg mt-5">
+<a class="text-white" href="{{ path('security_registration') }}">Créer mon compte</a>
+</button>
   </div>
 
 </main>
