--- a/templates/_layout/header_navbar.html.twig
+++ b/templates/_layout/header_navbar.html.twig
@@ -1,5 +1,5 @@
-<nav class=" bg-dark">
-  <div class="text-center">
+<nav class="header-nav-bar">
     <img id="nav_bar_logo" src="{{ asset('img/pantry_logo.png') }}" class="rounded" alt="...">
-  </div>
+    <a href="{{ path('security_login')}}" class="btn btn-login"  ><i class="fas fa-user"></i>Connexion</a>
 </nav>
+
