--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,9 @@
     <h1>Connexion</h1>
 
     <form action="{{ path('security_login')}}" method="post">
-
+        {% if error %}
+            <div class="alert alert-danger">Nom de compte ou mot de passe incorect</div>
+        {% endif %}
         <div class="form-group">
             <input placeholder="Adresse email ..."required name="_username" type="text" class="form-control">
         </div>
