--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -4,10 +4,23 @@
 
     <h1>Inscription</h1>
 
+
+
     {{ form_start(form)}}
-   
+    <div class="form-group">
+    {{ form_row(form.email, { 'label': 'Votre email', 'attr': {'class':'from-control','placeholder': 'Adress email ...'}}) }}
+    </div>
+    <div class="form-group">
+    {{ form_row(form.password, { 'label': 'Votre mot de passe ','attr': {'class':'from-control','placeholder': 'Mot de passe'}}) }}
+    </div>
+    <div class="form-group">
+    {{ form_row(form.confirm_password, { 'label': 'Conrfimez votre mot de passe ','attr': {'class':'from-control', 'placeholder': 'Répétez votre mot de passe'}}) }}
+    </div>
     <button type="submit" class="btn btn-success">
+
         Inscription !
     </button>
+
+
     {{ form_end(form)}}
 {% endblock %}
