--- a/templates/dashboard/fridge/index.html.twig
+++ b/templates/dashboard/fridge/index.html.twig
@@ -8,25 +8,25 @@
 {{container.name}}
 
 {% if products_list is empty %}
-    <a href=""> Créer votre première liste</a>
+    <a href="{{ path('dashboard_product_add')}}"> Créer votre première liste</a>
 {% else %}
     {% for product in products_list %}
     <div class="d-flex flex-row fridge-bg-color justify-content-around ">
-    
         <div class="justify-content-around">
             <span> {{ product.name }}</span>
             <span> {{ product.quantity }}</span>
         </div>
-
         <div class="">
-            <i class="far fa-list-alt"></i>
+           <a href="{{ path('dashboard_product_edit', {id: product.id})}}"><i class="far fa-list-alt" ></a></i>
             <i class="far fa-check-square"></i>
             <i class="fas fa-undo"></i>
             <i class="fas fa-times"></i>  
         </div>
-        
     </div>
+
     {% endfor %}
+    <a href="{{ path('dashboard_product_add') }}">Ajouter un produit</a>
+
 {% endif %}
 
 
