--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,7 @@
         <div class="form-group">
             <input placeholder="Mot de passe ..."required name="_password" type="password" class="form-control">
         </div>
-
+        <a href="{{ path('security_registration')}}">pas encore inscrit ? </a>
         <div class="form-group">
             <button type="submit" class="btn btn-success">
                 Connexion
