add vuejs tailwindcss

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css')}}">
         <link rel="stylesheet" href="{{ asset('css/style.css')}}">
+        <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+
+
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
@@ -17,7 +20,9 @@
         {% block body %}
    
         {% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('build/app.js') }}"></script>
+        {% endblock %}
     </div>
     </body>
      <!-- Font Awesome icons (free version)-->
