--- a/templates/pantry/index.html.twig
+++ b/templates/pantry/index.html.twig
@@ -3,20 +3,22 @@
 {% block title %}Salut!{% endblock %}
 
 {% block body %}
+<div id="header">
 
-<main role="main" class="container">
+
+</div>
+{% endblock %}
+
+
+{# <main role="main" class="container">
 
   <div class="starter">
     <h1>Pantry starter pack</h1>
     <p class="lead">Votre gestionnaire anti gaspillage<br> Pour moins de 2000€ mensuel  on vous aide a moins gaspiller </p>
-
+    </div>
 <button type="button" class="btn btn-primary btn-lg mt-5">
 <a class="text-white" href="{{ path('security_registration') }}">Créer mon compte</a>
 </button>
-
   </div>
 
-</main>
-
-
-{% endblock %}
+</main> #}
