--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -1,11 +1,11 @@
-<template>
-	<header id="navbarIndex" class=" bg-cover border-t-2 border-blue-600 h-full" style="background-image: url('https://previews.123rf.com/images/galitskaya/galitskaya1711/galitskaya171100360/90625423-banni%C3%88re-r%C3%A9frig%C3%A9rateur-ouvert-de-long-format-rempli-de-fruits-et-de-l%C3%A9gumes-frais-concept-de-nourriture-cru.jpg');">
+<header id="navbarIndex" class=" bg-cover border-t-2 border-blue-600 h-full" style="background-image: url('https://previews.123rf.com/images/galitskaya/galitskaya1711/galitskaya171100360/90625423-banni%C3%88re-r%C3%A9frig%C3%A9rateur-ouvert-de-long-format-rempli-de-fruits-et-de-l%C3%A9gumes-frais-concept-de-nourriture-cru.jpg');">
 		<div class="content px-8 py-2">
 			<nav class="flex items-center justify-between">
 				<h2 class="text-gray-200 font-bold text-2xl ">Accueil</h2>
 				<div class="auth flex items-center">
-					<button class="bg-transparent text-gray-200  p-2 rounded border border-gray-300 mr-4 hover:bg-gray-100 hover:text-gray-700"> <router-link to="/admin">Se connecter</router-link></button>
-					<button class="bg-gray-900 text-gray-200  py-2 px-3 rounded  hover:bg-gray-800 hover:text-gray-100">Créer un compte gratuitement</button>
+				<a href="{{ path('security_login') }}">	<button class="bg-transparent text-gray-200  p-2 rounded border border-gray-300 mr-4 hover:bg-gray-100 hover:text-gray-700"> Se connecter</button></a>
+				
+					<a href="{{ path('security_registration') }}"><button class="bg-gray-900 text-gray-200  py-2 px-3 rounded  hover:bg-gray-800 hover:text-gray-100">Créer un compte gratuitement</button></a>
 				</div>
 			</nav>
 			<div class="body mt-20 mx-8">
@@ -16,7 +16,7 @@
 						<p class="text-gray-300">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.
 						</p>
-						<span class="text-white">Créer un compte ?<a href="#" class="text-gray-900 text-lg ml-2 font-bold">Se connecter</a></span>
+						<span class="text-white">Créer un compte ?<a href="/login" class="text-gray-900 text-lg ml-2 font-bold">Se connecter</a></span>
 					</div>
 					<div class="w-full md:max-w-md mt-6">
 						<div class="card bg-white shadow-md rounded-lg px-4 py-4 mb-6 ">
@@ -43,14 +43,3 @@
 			</div>
 		</div>
 	</header>
-</template>
-
-<script>
-	export default {
-		name: "NavbarIndex"
-	}
-</script>
-
-<style scoped>
-
-</style>
