--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -15,7 +15,7 @@
 
                 <div class="footer_section1 p-5 w-48">
                     <div class="footer_title text-xs uppercase text-gray-500 font-medium">Support</div>
-                    <router-link class="footer_content my-3 block" to="/faq"> Faq <span class="footer_content_title text-teal-600 text-xs p-1"></span></router-link><a class="footer_content" href="/#">Conditions générales <span class="footer_content_title"></span></a>
+                    <a href="{{ path('dashboard_faq_index') }}" class="footer_content my-3 block">Faq <span class="footer_content_title text-teal-600 text-xs p-1"></span></a> <a class="footer_content" href="/#">Conditions générales <span class="footer_content_title"></span></a>
                 </div>
                 <div class="footer_section1 p-5 w-48 ">
                     <div class="footer_title text-xs uppercase text-gray-500 font-medium">Contact us</div>
