[VUE] test for question question array

--- a/templates/dashboard/faq/index.html.twig
+++ b/templates/dashboard/faq/index.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Hello FaqController!{% endblock %}
 
 {% block body %}
-  
 
-   
-<div id="faq" data-pseudo="{{ app.user.email  }}"></div>
+ 
+
+
+<div id="faq" data-pseudo="{{ app.user.email  }}" data-questiontest="{{ faq.question  }}" data-questionarray="{{ faqarray }}"></div>
     
   
 {% endblock %}
