--- a/templates/dashboard/faq/index.html.twig
+++ b/templates/dashboard/faq/index.html.twig
@@ -4,10 +4,8 @@
 
 {% block body %}
 
- 
+
+    <div id="faq" data-questions="{{ questions}}"></div>
 
 
-<div id="faq" data-pseudo="{{ app.user.email  }}" data-questiontest="{{ faq.question  }}" data-questionarray="{{ faqarray }}"></div>
-    
-  
 {% endblock %}
