[Vue]  fix faq in vue js

--- a/templates/dashboard/faq/index.html.twig
+++ b/templates/dashboard/faq/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-    <div id="faq" data-questions="{{ questions }}"></div>
+    <div id="faq" faqData="{{ faqData }}"></div>
 
 
 {% endblock %}
