[VUE] modal login

--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -3,7 +3,7 @@
 			<nav class="flex items-center justify-between">
 				<h2 class="text-gray-200 font-bold text-2xl ">Accueil</h2>
 				<div class="auth flex items-center">
-				<a href="{{ path('security_login') }}">	<button class="bg-transparent text-gray-200  p-2 rounded border border-gray-300 mr-4 hover:bg-gray-100 hover:text-gray-700"> Se connecter</button></a>
+				<a href="{{ path('security_login') }}">	<div id="ButtonLogin"></div> </a>
 				
 					<a href="{{ path('security_registration') }}"><button class="bg-gray-900 text-gray-200  py-2 px-3 rounded  hover:bg-gray-800 hover:text-gray-100">Créer un compte gratuitement</button></a>
 				</div>
@@ -18,27 +18,7 @@
 						</p>
 						<span class="text-white">Créer un compte ?<a href="/login" class="text-gray-900 text-lg ml-2 font-bold">Se connecter</a></span>
 					</div>
-					<div class="w-full md:max-w-md mt-6">
-						<div class="card bg-white shadow-md rounded-lg px-4 py-4 mb-6 ">
-							<form action="#">
-								<div class="flex items-center justify-center">
-									<h2 class="text-2xl font-bold tracking-wide">
-										Bienvenue
-									</h2>
-								</div>
-								<h2 class="text-xl text-center font-semibold text-gray-800 mb-2">
-									Se connecter
-								</h2>
-								<input aria-label="" type="text" class="rounded px-4 w-full py-1 bg-gray-200  border border-gray-400 mb-6 text-gray-700 placeholder-gray-700 focus:bg-white focus:outline-none" placeholder="Email Address">
-								<input aria-label="" type="password" class="rounded px-4 w-full py-1 bg-gray-200  border border-gray-400 mb-4 text-gray-700 placeholder-gray-700 focus:bg-white focus:outline-none" placeholder="Password">
-								<div class="flex items-center justify-between">
-									<a href="#" class="text-gray-600">Mot de passe oublié?</a>
-									<button class="bg-gray-800 text-gray-200  px-2 py-1 rounded">S'enregistrer</button>
-								</div>
-							</form>
-						</div>
 
-					</div>
 				</div>
 			</div>
 		</div>
