--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -3,7 +3,7 @@
 			<nav class="flex items-center justify-between">
 				<h2 class="text-gray-200 font-bold text-2xl ">Accueil</h2>
 				<div class="auth flex items-center">
-				<a href="{{ path('security_login') }}">	<div id="ButtonLogin"></div> </a>
+					<div id="ButtonLogin"></div> 
 				
 					<a href="{{ path('security_registration') }}"><button class="bg-gray-900 text-gray-200  py-2 px-3 rounded  hover:bg-gray-800 hover:text-gray-100">Créer un compte gratuitement</button></a>
 				</div>
